# 52

./: LICENSE  README.md
01/: 2039-01.timer  Makefile  README.md  all.sh  timer2tex.py
02/: README.md  main.go  run.sh
02/html/: base.html  index.html
03/: Makefile.am  README.md  configure.ac  main.c
04/: 4.py  README.md
05/: README.md  buddhabrot.html  buddhabrot.js
06/: Makefile.am  README.md  configure.ac  main.c
07/: .gitignore  README.md  main.go  make.sh  update.sh
07/html/: base.html  host.html  index.html
08/: README.md  main.c  make.sh
09/: README.md  imdb
10/: 10  README.md
11/: 11  README.md
12/: 12  README.md
13/: 13  README.md
14/: 14.html  README.md
15/: README.md  main.lua
16/: 16  README.md
17/: 17  README.md  factorial.txt
18/: README.md  main.c  make.sh
19/: 19  README.md
20/: 20.html  README.md
21/: .gitignore  Makefile.am  README.md  configure.ac  main.c
22/: .gitignore  Makefile.am  README.md  configure.ac  main.c
23/: .gitignore  README.md  http.go  main.go  pack.go
24/: 24.html  README.md
25/: 25.html  README.md
26/: 26.html  README.md
27/: 27.html  README.md
28/: 28.go  README.md
29/: .gitignore  Makefile.am  README.md  configure.ac  dot.f.glsl  dot.v.glsl  main.cc  res.h  res.s
30/: 30.html  README.md
31/: .gitignore  Makefile.am  README.md  configure.ac  image.f.glsl  image.v.glsl  main.cc  res.h  res.s
32/: .gitignore  Makefile.am  README.md  configure.ac  gl.cc  gl.h  main.cc  res.h  res.s  text.f.glsl  text.v.glsl
33/: 33.html  README.md
34/: 34.html  README.md
(+4 files in other folders)
